tarmac/new_pattern24/kubernetes/applications/ps/overlays/environments/prod/app-ps-ui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:071766652168:certificate/ca119fb6-99bc-4f92-9754-20efa05cb39e
    alb.ingress.kubernetes.io/group.name: ps
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}, {"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-name: ps-ingress
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-3-2021-06
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/tags: Environment=prod,Team=devops
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: ps.cliniciannexus.com
  labels:
    app.kubernetes.io/instance: ps
  name: ps
  namespace: ps
spec:
  ingressClassName: alb
  rules:
  - host: ps.cliniciannexus.com
    http:
      paths:
      - backend:
          service:
            name: app-ps-ui
            port:
              name: https
        path: /
        pathType: Prefix
      - backend:
          service:
            name: app-ps-performance-service
            port:
              name: https
        path: /api/performance
        pathType: Prefix
      - backend:
          service:
            name: app-ps-tenant-api-service
            port:
              name: https
        path: /api/tenant
        pathType: Prefix
      - backend:
          service:
            name: app-ps-settings-api-service
            port:
              name: https
        path: /api/settings
        pathType: Prefix
      - backend:
          service:
            name: app-ps-productivity-service
            port:
              name: https
        path: /api/productivity
        pathType: Prefix
